# Variable-Dumper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Dumper.cpp  Dumper.h  DumperContainer.cpp  DumperContainer.h  DumperManager.cpp  DumperManager.h  VariableDumper.h
test/: CMakeLists.txt  VariableDumperTs.cpp
